# dotfiles

./: .gitignore
common/: .Xmodmap  .Xresources  .csirc  .xinitrc  .zprofile  .zshrc
common/.config/: dircolors
common/.config/alacritty/: alacritty.yml
common/.config/guix/: channels.scm
common/.config/mpd/: mpd.conf
common/.config/mpv/: mpv.conf
common/.config/sx/: sxrc
common/.config/termite/: config
common/.emacs.d/: buhman-common.el  buhman-haskell.el  buhman-lisp.el  buhman-misc.el  buhman-packages.el  buhman-sql.el  init.el
common/.emacs.d/buhman/: 0packages.el  c.el  common.el  haskell.el  lisp.el  misc.el  packages.el
common/.emacs.d/scheme/: init-gerbil.scm
common/.xmonad/: buhman-xmonad.cabal  build  xmonad.hs
xmonad/: xmonad.hs
